# snipora

./: README.md  components.json  index.html  justfile  main.html  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
scripts/: generate-icons.ts
src/: AppWrapper.vue  forward-console.ts  i18n.ts  index.css  main.ts  router.ts  type-utils.d.ts  typed-router.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  popup.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.yaml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  dto.rs  info.rs  mod.rs  settings.rs  snippets.rs  tags.rs  tray.rs  utils.rs  windows.rs
src-tauri/src/db/: helper.rs  mod.rs  schema.rs  snippets.rs  tags.rs  utils.rs
src-tauri/src/settings/: defaults.rs  internal.rs  migrations.rs  mod.rs  utils.rs
src-tauri/src/tray/: tray.rs
src-tauri/src/windows/: main_window.rs  mod.rs  popup_window.rs
src/api/: dto.ts
src/api/commands/: clipboard.ts  index.ts  info.ts  settings.ts  snippets.ts  tags.ts  tray.ts  windows.ts
src/components/icons/: SniporaIconDark.vue  SniporaIconLight.vue  SniporaLogo.vue  TagOff.vue  index.ts
src/composables/: defineShortcut.ts  onDataChanged.ts  useAsyncAction.ts  useAutostart.ts  useColorMode.ts  useLocalSettings.ts  useOsType.ts  useRuntimeInfo.ts  useTauriEventListener.ts  useUnsubscribable.ts
src/composables/data/: useAllSnippets.ts  useAllTags.ts  useRecentSnippets.ts  useSnippetById.ts  useSnippetsByTag.ts  useUntaggedSnippets.ts
src/lib/: coloring.ts
src/locales/: en.yaml
src/main/: MainApp.vue  entry.ts
src/main/dialogs/: EditSnippetDialog.vue  GlobalSearchDialog.vue  NewSnippetDialog.vue
src/main/layouts/: CenteredLayout.vue  DefaultLayout.vue  NullLayout.vue  index.ts
src/main/sidebar/: AppSidebar.vue  AppSidebarContent.vue  AppSidebarFooter.vue  AppSidebarHeader.vue
src/popup/: PopupApp.vue  entry.ts
(+59 files in other folders)
