[package]
name = "snipora"
description = "Snipora is a lightweight, local-first snippet manager for fast capture, simple organization, and quick search, keeping everyday text at your fingertips."
authors = ["snipora"]
homepage = "https://github.com/snipora"
edition = "2021"

[lib]
name = "snipora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
